--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+25&family=Pixelify+Sans:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
+
+.jersey-10-regular {
+  font-family: "Jersey 10", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@theme {
+  --font-primary: "Jersey 25", "sans-serif";
+  --font-secondary: "Inter", "sans-serif";
+}
